# jewelrymodel/token.go
@@ -1,0 +1,5 @@
+package jewelrymodel
+
+type TokenStruct struct {
+	Token string `json:"token"`
+}
